@@ -1,3 +1,6 @@
+2012-06-25 Kazuhiko
+* add knowledge pad's group in gadget title div class.
+
 2011-09-26 Kazuhiko
 * ERP5Site_getKnowledgePadListForUser should handle Unauthorized exception.
 
